// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-date-now lf-baseline 1`] = `
{
  "rule": "odw/no-date-now",
  "severity": "warning",
  "span": {
    "end": {
      "column": 27,
      "line": 3,
      "offset": 107,
    },
    "start": {
      "column": 19,
      "line": 3,
      "offset": 99,
    },
  },
  "spanText": ""Date.now"",
}
`;

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-date-now crlf-terminators 1`] = `
{
  "rule": "odw/no-date-now",
  "severity": "warning",
  "span": {
    "end": {
      "column": 27,
      "line": 3,
      "offset": 109,
    },
    "start": {
      "column": 19,
      "line": 3,
      "offset": 101,
    },
  },
  "spanText": ""Date.now"",
}
`;

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-date-now unicode-bmp 1`] = `
{
  "rule": "odw/no-date-now",
  "severity": "warning",
  "span": {
    "end": {
      "column": 27,
      "line": 3,
      "offset": 106,
    },
    "start": {
      "column": 19,
      "line": 3,
      "offset": 98,
    },
  },
  "spanText": ""Date.now"",
}
`;

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-date-now unicode-astral 1`] = `
{
  "rule": "odw/no-date-now",
  "severity": "warning",
  "span": {
    "end": {
      "column": 27,
      "line": 3,
      "offset": 110,
    },
    "start": {
      "column": 19,
      "line": 3,
      "offset": 102,
    },
  },
  "spanText": ""Date.now"",
}
`;

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-math-random lf-baseline 1`] = `
{
  "rule": "odw/no-math-random",
  "severity": "warning",
  "span": {
    "end": {
      "column": 27,
      "line": 3,
      "offset": 107,
    },
    "start": {
      "column": 16,
      "line": 3,
      "offset": 96,
    },
  },
  "spanText": ""Math.random"",
}
`;

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-math-random crlf-terminators 1`] = `
{
  "rule": "odw/no-math-random",
  "severity": "warning",
  "span": {
    "end": {
      "column": 27,
      "line": 3,
      "offset": 109,
    },
    "start": {
      "column": 16,
      "line": 3,
      "offset": 98,
    },
  },
  "spanText": ""Math.random"",
}
`;

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-math-random unicode-bmp 1`] = `
{
  "rule": "odw/no-math-random",
  "severity": "warning",
  "span": {
    "end": {
      "column": 27,
      "line": 3,
      "offset": 106,
    },
    "start": {
      "column": 16,
      "line": 3,
      "offset": 95,
    },
  },
  "spanText": ""Math.random"",
}
`;

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-math-random unicode-astral 1`] = `
{
  "rule": "odw/no-math-random",
  "severity": "warning",
  "span": {
    "end": {
      "column": 27,
      "line": 3,
      "offset": 110,
    },
    "start": {
      "column": 16,
      "line": 3,
      "offset": 99,
    },
  },
  "spanText": ""Math.random"",
}
`;

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-argless-new-date lf-baseline 1`] = `
{
  "rule": "odw/no-argless-new-date",
  "severity": "warning",
  "span": {
    "end": {
      "column": 27,
      "line": 3,
      "offset": 107,
    },
    "start": {
      "column": 17,
      "line": 3,
      "offset": 97,
    },
  },
  "spanText": ""new Date()"",
}
`;

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-argless-new-date crlf-terminators 1`] = `
{
  "rule": "odw/no-argless-new-date",
  "severity": "warning",
  "span": {
    "end": {
      "column": 27,
      "line": 3,
      "offset": 109,
    },
    "start": {
      "column": 17,
      "line": 3,
      "offset": 99,
    },
  },
  "spanText": ""new Date()"",
}
`;

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-argless-new-date unicode-bmp 1`] = `
{
  "rule": "odw/no-argless-new-date",
  "severity": "warning",
  "span": {
    "end": {
      "column": 27,
      "line": 3,
      "offset": 106,
    },
    "start": {
      "column": 17,
      "line": 3,
      "offset": 96,
    },
  },
  "spanText": ""new Date()"",
}
`;

exports[`deterministic-time diagnostic spans round-trips original-source snippets for odw/no-argless-new-date unicode-astral 1`] = `
{
  "rule": "odw/no-argless-new-date",
  "severity": "warning",
  "span": {
    "end": {
      "column": 27,
      "line": 3,
      "offset": 110,
    },
    "start": {
      "column": 17,
      "line": 3,
      "offset": 100,
    },
  },
  "spanText": ""new Date()"",
}
`;
